--- a/html/index.html
+++ b/html/index.html
@@ -1,9 +1,20 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fr">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Château de Chambord</title>
+    <link rel="stylesheet" href="../css/reset.css" />
+    <link rel="stylesheet" href="../css/style.css" />
   </head>
-  <body></body>
+  <body>
+    <nav>
+      <ul>
+        <li><a href="#">Billeterie</a></li>
+        <li><a href="#">Boutique</a></li>
+        <li><a href="#">Soutenir</a></li>
+        <li><a href="#">Vous êtes</a></li>
+      </ul>
+    </nav>
+  </body>
 </html>
