création du css

--- a/html/index.html
+++ b/html/index.html
@@ -3,17 +3,17 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Château de Chambord</title>
+    <title>Château de Versailles</title>
     <link rel="stylesheet" href="../css/reset.css" />
     <link rel="stylesheet" href="../css/style.css" />
   </head>
   <body>
     <nav>
       <ul>
-        <li><a href="#">Billeterie</a></li>
-        <li><a href="#">Boutique</a></li>
-        <li><a href="#">Soutenir</a></li>
-        <li><a href="#">Vous êtes</a></li>
+        <li>Billeterie</li>
+        <li>Boutique</li>
+        <li>Soutenir</li>
+        <li>Vous êtes</li>
       </ul>
     </nav>
   </body>
