css amélioré et ajouté d'un dropdown

--- a/html/index.html
+++ b/html/index.html
@@ -11,9 +11,24 @@
     <nav>
       <ul>
         <li>Billeterie</li>
-        <li>Boutique</li>
-        <li>Soutenir</li>
-        <li>Vous êtes</li>
+        <li>
+          Visites
+          <ul class="dropdown">
+            <li>Visite guidée</li>
+            <li>Visite libre</li>
+            <li>Activités</li>
+          </ul>
+        </li>
+        <li>Nous soutenir</li>
+        <li>
+          Infos pratiques
+          <ul class="dropdown">
+            <li>Boutique</li>
+            <li>Hébérgement</li>
+            <li>Restauration</li>
+            <li>Transport</li>
+          </ul>
+        </li>
       </ul>
     </nav>
   </body>
